<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
  <LinearLayout
   android:id="@+id/view"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin">
    <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:onClick="saveReceipt"
     android:text="@string/save"/>
    <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:onClick="discardReceipt"
     android:text="@string/nosave"/>
    <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:onClick="showOriginalPicture"
     android:text="@string/showOriginalPicture"/>
    <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:onClick="showPreprocessedPicture"
     android:text="@string/showPreprocessedPicture"/>
    <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:onClick="showTranscription"
     android:text="@string/showTranscription"/>
  </LinearLayout>
</ScrollView>
